@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-16T02:29:36Z",
-  "count_outdated" : 184,
-  "uniques_outdated" : 55,
-  "count" : 200,
-  "uniques" : 65,
+  "timestamp" : "2022-10-16T08:29:01Z",
+  "count_outdated" : 185,
+  "uniques_outdated" : 56,
+  "count" : 201,
+  "uniques" : 66,
   "clones" : [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
@@ -72,6 +65,13 @@
       "timestamp": "2022-10-15T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
