@@ -1,3 +1,11 @@
+2022-10-16T08:29:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258820545 # 140
+* notice: last 14d: unq all: 2 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 55 184 / 65 200
+* notice: next accum: outdated-unq outdated-all / unq all: 56 185 / 66 201
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-10-02] / [2022-10-16]
+
 2022-10-16T02:29:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3257961769 # 139
 * notice: last 14d: unq all: 2 16
